Fixed an update glitch in the Colorize Mask

Now I had to introduce a special property for the masks, which
reports the additional area where the masks draws. This area
cannot be computed by mean of change/needRect functionality
since it doesn't depend on the dirty rect of the layer.

BUG:369093
Fixes T3812