libs/image/lazybrush/kis_colorize_mask.h
@@ -84,6 +84,12 @@ public:
     QRect exactBounds() const;
     QRect extent() const;
 
+    /**
+     * Colorize mask has its own "projection", so it should report it
+     * to the parent layer using non-dependent-extent property
+     */
+    QRect nonDependentExtent() const Q_DECL_OVERRIDE;
+
     void setSectionModelProperties(const KisBaseNode::PropertyList &properties);
     KisBaseNode::PropertyList sectionModelProperties() const;
 
